--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,19 @@
   <title>CavaTable</title>
   <meta name="description" content="description">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
-  <link rel="stylesheet" type="text/css" href="./style/main.css">
+  <link rel="stylesheet" type="text/css" href="/style/main.css">
 </head>
 
 <body id="bootstrap-overrides">
   <main>
-    <h1>This works!</h1>
-    <div>
+    <div id="photo-service">
       <span>Will not show this if React Component renders correctly</span>
     </div>
   </main>
+  <script src="/photos/photosBundle"></script>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
-
 </body>
 
 </html>
