Framework for additional components.

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,28 @@
   <title>CavaTable</title>
   <meta name="description" content="description">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
-  <link rel="stylesheet" type="text/css" href="/style/main.css">
 </head>
 
 <body id="bootstrap-overrides">
   <main>
-    <div id="photo-service">
-      <span>Will not show this if React Component renders correctly</span>
+    <div>
+      <div id="reservation-service">
+        <span>Reservation goes here</span>
+      </div>
+      <div>
+        <div id="overview-service">
+          <span>Overview goes here</span>
+        </div>
+        <div id="photo-service">
+          <span>Photos goes here</span>
+        </div>
+        <div id="menu-service">
+          <span>Menu goes here</span>
+        </div>
+        <div id="reviews-service">
+          <span>Review goes here</span>
+        </div>
+      </div>
     </div>
   </main>
   <script src="/photos/photosBundle"></script>
