Added Overviews, Menus and Reviews to proxy.

--- a/public/index.html
+++ b/public/index.html
@@ -6,32 +6,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>CavaTable</title>
   <meta name="description" content="description">
+  <link rel="icon" type="img/png" href="./assests/CavaTableFavicon.PNG" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body id="bootstrap-overrides">
   <main>
     <div>
+      <img src="./assests/BackgroundImg.png" class="cava-static-background" width="100%">
+      <img src="./assests/CavaTableLogo.PNG" class="cava-logo" width="12%">
+    </div>
+    <div>
       <div id="reservation-service">
         <span>Reservation goes here</span>
       </div>
       <div>
-        <div id="overview-service">
+        <div id="overviewModule">
           <span>Overview goes here</span>
         </div>
         <div id="photo-service">
           <span>Photos goes here</span>
         </div>
-        <div id="menu-service">
+        <div id="menusModule">
           <span>Menu goes here</span>
         </div>
-        <div id="reviews-service">
+        <div id="reviews">
           <span>Review goes here</span>
         </div>
       </div>
     </div>
   </main>
+  <script src="/overviews/overviewsBundle.js"></script>
   <script src="/photos/photosBundle"></script>
+  <script src="/photos/photosBundleCSS"></script>
+  <script src="/menus/menusBundle.js"></script>
+  <script src="/reviews/reviewsBundle.js"></script>
+  <script src="/reviews/reviewsMain.css"></script>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
