Removed menu bar img.

--- a/public/index.html
+++ b/public/index.html
@@ -12,38 +12,35 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-  <link rel="stylesheet" src="/photos/photosBundleCSS">
-  <link rel="stylesheet" src="/reviews/reviewsMain.css">
-  <link rel="stylesheet" src="/styles/style.css">
-
+  <link rel="stylesheet" href="/photos/photosBundleCSS">
+  <!-- <link rel="stylesheet" href="/reviews/reviewsMain.css"> -->
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-<body id="bootstrap-overrides">
+<body>
   <main>
-    <div>
-      <img src="./assests/CavaTable_StaticImgBackground.png" class="cava-static-background" width="1441px">
-    </div>
-    <div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8">
-            <div id="overviewModule">
-              <span>Overview goes here</span>
-            </div>
+    <img src="./assests/CavaTable_StaticImgBackground.png" width="1441px">
+    <div class="container" id="body-container">
+      <div class="row">
+        <div class="col-lg-8">
+          <div id="overviewModule">
+            <span>Overview goes here</span>
+          </div>
+          <div id="bootstrap-overrides">
             <div id="photo-service">
               <span>Photos goes here</span>
             </div>
-            <div id="menusModule">
-              <span>Menu goes here</span>
-            </div>
-            <div id="reviews">
-              <span>Review goes here</span>
-            </div>
           </div>
-          <div class="col-lg-4">
-            <div id="appReserve" class="sticky-top">
-              <span>Reservation goes here</span>
-            </div>
+          <div id="menusModule">
+            <span>Menu goes here</span>
+          </div>
+          <div id="reviews">
+            <span>Review goes here</span>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div id="appReserve" class="sticky-top">
+            <span>Reservation goes here</span>
           </div>
         </div>
       </div>
