--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
   <link rel="stylesheet" href="/photos/photosBundleCSS">
-  <!-- <link rel="stylesheet" href="/reviews/reviewsMain.css"> -->
+  <link rel="stylesheet" href="/reviews/reviewsMain.css">
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 
